--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<version>3.3.0</version>
 			<type>jar</type>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.5.2</version>
+		</dependency>
 
 	</dependencies>
 
