--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     container_name: "mysqldb"
     restart: always
     environment:
-      MYSQL_DATABASE: "$MYSQL_DB_NAME"
-      MYSQL_USER: "MYSQL_DB_USERNAME"
-      MYSQL_PASSWORD: "MYSQL_DB_PASSWORD"
-      MYSQL_ROOT_PASSWORD: "$MYSQL_DB_PASSWORD"
+      MYSQL_DATABASE: "db"
+      MYSQL_USER: "user"
+      MYSQL_PASSWORD: "password"
+      MYSQL_ROOT_PASSWORD: "password"
     ports:
       - "3306:3306"
     volumes:
@@ -18,9 +18,10 @@ services:
   redis-server:
     hostname: redis
     container_name: "redisdb"
-    image: 'redis'
+    image: "redis:alpine"
     ports:
       - "6379:6379"
 
 volumes:
   my-db:
+
