--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,12 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
-			<version>2.3.3.RELEASE</version>
 		</dependency>
 
 		<dependency>
