--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,13 @@ services:
     volumes:
       - my-db:/var/lib/mysql
 
+  redis-server:
+    hostname: redis
+    container_name: "redisdb"
+    image: 'redis'
+    ports:
+      - "6379:6379"
+
 volumes:
   my-db:
 
