--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,14 @@
 			<optional>true</optional>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-maven-plugin -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<version>2.6.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
