--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
 version: "3.1"
 
 services:
+
+  app:
+    container_name: ApplicationServiceAPI
+    command: java -jar target/storage-0.0.1-SNAPSHOT.jar
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "9090:9090"
+    environment:
+      - spring.datasource.url=jdbc:mysql://db:3306/db
+      - spring.datasource.username=user
+      - spring.datasource.password=password
+      - spring.redis.host=redis
+      - spring.redis.port=6379
+      - spring.redis.password=password
+      - spring.redis.timeout=60000
+    depends_on:
+      - db
+      - redis-server
+
   db:
     image: mysql
     container_name: "mysqldb"
