--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,22 @@ jobs:
     steps:
       # Checkout the code as the first step.
       - checkout
+
+      # start needed env with docker compose run
+      - run:
+          name: Install Docker Compose
+          environment:
+            COMPOSE_VERSION: '1.29.2'
+          command: |
+            curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
+
+      - setup_remote_docker
+
+      - run:
+          name: Build images of services declared in docker-compose.yml
+          command: docker-compose run -d
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
