--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,14 @@ jobs:
           name: Test
           command: mvn test
 
+      # store results of tests and artifact     
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: raw-test-output
+
+      - store_test_results:
+          path: /tmp/test-results
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
