--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,8 @@ jobs:
               echo -n .
               sleep 1
             done
-            echo Failed waiting for Postgress && exit 1
+            echo Failed waiting for MySQL && exit 1
+            exit 1
 
       # Then run your tests!
       - run:
