--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.11.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+            	    <artifactId>spring-test</artifactId>
+        	</dependency>
 
 	</dependencies>
 
